Add initial repo setup

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,72 @@ go.work.sum
 # Editor/IDE
 # .idea/
 # .vscode/
+.DS_Store
+
+# Managed by gitjoin - do not edit this section
+bep/demosites/hugojsbatchdemo/
+bep/gocode/apps/backup/
+bep/gocode/apps/clocks/
+bep/gocode/apps/create-a-million-pages/
+bep/gocode/apps/firstupdotenv/
+bep/gocode/apps/gitjoin/
+bep/gocode/apps/gobench/
+bep/gocode/apps/gomaintemplate/
+bep/gocode/apps/goportabletext/
+bep/gocode/apps/gorder/
+bep/gocode/apps/killswitch/
+bep/gocode/apps/mclib/
+bep/gocode/apps/mygithelper/
+bep/gocode/apps/mygithelper/gocode/firstupdotenv/
+bep/gocode/apps/nogo/
+bep/gocode/apps/npmgoproxy/
+bep/gocode/apps/punused/
+bep/gocode/apps/s3deploy/
+bep/gocode/libs/debounce/
+bep/gocode/libs/execrpc/
+bep/gocode/libs/gitmap/
+bep/gocode/libs/goat/
+bep/gocode/libs/gobench/
+bep/gocode/libs/godartsass/
+bep/gocode/libs/gojap/
+bep/gocode/libs/golibsass/
+bep/gocode/libs/golibtemplate/
+bep/gocode/libs/gowebp/
+bep/gocode/libs/helpers/
+bep/gocode/libs/imagemeta/
+bep/gocode/libs/lazycache/
+bep/gocode/libs/logg/
+bep/gocode/libs/overlayfs/
+bep/gocode/libs/predicate/
+bep/gocode/libs/semverpair/
+bep/gocode/libs/simplecobra/
+bep/gocode/libs/textandbinarywriter/
+bep/gocode/libs/tmc/
+bep/gocode/libs/triebytesmapper/
+bep/gocode/macosnotary/buildpkg/
+bep/hugomodules/hugo-mod-misc/
+bep/hugomodules/hugo-starter-bootstrap-basic/
+bep/hugothemes/docuapi/
+bep/hugothemes/galleriesdeluxe/
+bep/hugothemes/gallerydeluxe/
+bep/hugothemes/portable-hugo-links/
+bep/misc/ai-watchdog/
+bep/misc/dockerfiles/
+bep/sites/bep.consulting/
+bep/sites/bep.is/
+bep/sites/bepsays.com/
+bep/sites/staticbattery.com/
+gohugoio/gocode/gift/
+gohugoio/gocode/go-i18n/
+gohugoio/gocode/go-radix/
+gohugoio/gocode/hashstructure/
+gohugoio/gocode/httpcache/
+gohugoio/gocode/hugo-goldmark-extensions/
+gohugoio/gocode/hugo/
+gohugoio/gocode/release/hugoreleaser-archive-plugins/
+gohugoio/gocode/release/hugoreleaser/
+gohugoio/sites/hugoDocs/
+gohugoio/sites/hugoThemesSiteBuilder/
+gohugoio/sites/testing/hugo-testing-git-versions/
+gohugoio/sites/testing/hugoTestModulesJS/
+# End gitjoin managed section
